service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ombi
  labels:
    app: ombi
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: ombi
