ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ombi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  ombi
            port:
              number: 5000
